--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 @import "tailwindcss";
+@custom-variant dark (&:where(.dark, .dark *));
+
 
 :root {
   --background: #ffffff;
@@ -19,7 +21,6 @@
     --foreground: #ededed;
   }
 } */
-
 body {
   /* background: var(--background); */
   color: var(--foreground);
